# ThundeRiNG

./: .gitignore  README.md
cmake/: FindIOMP.cmake  FindMKL.cmake  generate_examples_list.cmake
cpu/: mkl_rng.cpp  setup_env.sh
cpu/cmake/: FindTBB.cmake  check_param.cmake  setup_compiler.cmake
cpu/dpcpp/: CMakeLists.txt  test_build.sh
cpu/dpcpp/common/: common_for_examples.hpp
cpu/dpcpp/rng/: common_for_rng_examples.hpp  rng.lst
cpu/dpcpp/rng/source/: continious_distributions.cpp  cpu_test.cpp  discrete_distributions.cpp  service_functions.cpp  service_functions_backup.cpp  soboluserdirnums-joe-kuo-attribution-notice.txt  soboluserdirnums-joe-kuo.cpp  test.cpp  uniform.cpp  uniform_usm.cpp
fpga/: .gitignore  rng.sublime-project
fpga/rng/: Makefile  NOTE.md  krnl_incr.cfg  make.sh  run_hw_emu.sh  xrt.ini
fpga/rng/mk/: base_hls_rules.mk  base_host_rules.mk  color.mk  fast_build.mk  fast_build_common.mk  hls_rules.mk  hls_rules_multiple_cu.mk  host_rules.mk  phase_app.mk  phase_hw.mk  phase_init.mk  phase_misc.mk  phase_sw.mk  test_hls_rules.mk  test_host_rules.mk
fpga/rng/mk/tcl/: flush_mode.tcl  hls_config.tcl
fpga/rng/src/: automation.sh  host.cpp  rng_type.h  stream_operation.h
fpga/rng/src/acc/: Makefile  increment.cpp
fpga/rng/src/automation/: auto_gen_code.mk  para_check.h  parser.cpp  parser.h
fpga/rng/src/automation/parser/: mem_interface.cpp  (+1 more)
fpga/rng/src/rng/: Makefile  rng_end.cpp  rng_main.cpp  rng_start.cpp
fpga/rng/src/rsgu/: Makefile  ssrng_state_merge.cpp  ssrng_state_update_0.cpp  ssrng_state_update_1.cpp  ssrng_state_update_2.cpp  ssrng_state_update_3.cpp  ssrng_state_update_4.cpp  ssrng_state_update_5.cpp  ssrng_state_update_6.cpp  ssrng_state_update_7.cpp  ssrng_state_update_8.cpp  xor32s.h
fpga/rng/src/sou/: Makefile  rng_instance_1.cpp
fpga/rng/src/soum/: Makefile  rng_instance_1.cpp  sou_function.h
fpga/rng/src/top/: Makefile
fpga/script/: tool_report.sh
gpu/: Makefile  estpi.cpp
gpu/4_Finance/BlackScholes/: Makefile
gpu/4_Finance/BlackScholes_nvrtc/: Makefile
gpu/4_Finance/MonteCarloMultiGPU/: .gitignore  Makefile  MonteCarloMultiGPU.cpp  MonteCarlo_common.h  MonteCarlo_kernel.cu  MonteCarlo_reduction.cuh  test_build.sh
gpu/4_Finance/SobolQRNG/: Makefile
gpu/4_Finance/binomialOptions/: Makefile
gpu/4_Finance/binomialOptions_nvrtc/: Makefile
gpu/4_Finance/quasirandomGenerator/: Makefile
gpu/4_Finance/quasirandomGenerator_nvrtc/: Makefile
misc/: asap_type.h  config.h  data_flow.cpp  fpga_edge_match.h  fpga_mpcg.h  host.cpp  init_state.h  mem_interface.h  mpcg.h  ovd.hpp  stream.hpp
misc/estpi/: host.cpp  init_state.h  main.cpp  mem_read.cpp  mem_write.cpp  ssrng.cpp  ssrng.h
misc/mc/: GNUmakefile  bs_reference.c  data_gen.c  euro_opt.h  makefile  mc.c  test.sh
misc/ssrng/: krnl_incr.ini  rng_type.h  ssrng.cpp  ssrng_state_merge.cpp  ssrng_state_update_0.cpp  ssrng_state_update_1.cpp  ssrng_state_update_2.cpp  ssrng_state_update_3.cpp  ssrng_state_update_4.cpp  ssrng_state_update_5.cpp  ssrng_state_update_6.cpp  ssrng_state_update_7.cpp  ssrng_state_update_8.cpp
report/: 0_rng_report  1_single_estimator  2_l1_l2_report  2_l2_report  2_z_compare of output mrng  3_mpcg_bigcrush  3_mpcg_crush  3_pcg_bigcrush  3_pcg_crush  3_pcg_smallcrush  4_mpcg_exe_time  5_mspcg_crush_1024  5_mspcg_crush_2  6_bs_kernel_util_routed.rpt  6_bs_kernel_util_synthed.rpt  6_rs_kernel_util_routed.rpt  6_rs_kernel_util_synthed.rpt  6_xor32_rr_kernel_util_routed.rpt  6_xor32_rr_kernel_util_synthed.rpt  7_corr_xor32
test/: Makefile  RNG_test  bit_operation.h  grep.sh  prt.mk  rng_header.h  rng_list.h  rng_test.cpp  rng_test.mk
test/corr_test/: corr_lcg.c  corr_lcgd.c  corr_mpcg.c  corr_pcg.c  corr_thundering_without_lsg.c  corr_xor32.c  corr_xorshift128.h  corrcoef.py  corrcoef.sh  gen_seq.sh  gen_seq_xor32.sh  test.sh
test/hwd/: hwd.c  hwd.sh  hwd_test.mk  prngs_hwd.c
test/lcg_jumpahead/: gen_xor32s.sh  jump_ahead.sh  jumpxor32.c  jumpxorwow.cpp  lcg_jump_ahead_test.c
test/rngs/: lut_sr.h  ompcg.h  philox.h  rng.hpp  sota1.h  xor32s.h  xorshift128.h  xorshift128p.h  xorshift32.h  xorwow.h
test/sharing_throughput/: throughput_test.cpp  throughput_test.sh
test/tools/: popcount.py  stat_hw.py
test/u01/: backup.sh  pr.sh  testu01_install.sh  u01.sh  u01_compile_test.sh  u01_lcg_de.sh  u01_pcg_rr.sh  u01_pcg_rs.sh
(+2 files in other folders)
